# plottery

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPMENT.md  README.md  release.toml
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/project_definition/: generate_project.rs  project.rs
cli/test/test_project/test_project_cargo/: Cargo.toml
dev/: Cargo.toml
editor/: Cargo.toml  Dioxus.toml  README.md
editor/scripts/: release_editor.sh
editor/src/: main.css  main.rs  project_overview.rs  routes.rs  style.css
editor/src/components/: editor.css  editor.rs  image.css  image.rs  loading.css  loading.rs  loading_spinner.css  loading_spinner.rs  mod.rs  navigation.css  navigation.rs  project_list.css  project_list.rs  project_overview.css  project_overview.rs
editor/src/model/: app_state.rs
editor/src/project_runner/: mod.rs  project_runner.rs
editor/src/router/: browser.css  browser.rs  editor.css  editor.rs  mod.rs
editor/src/router/add_project/: mod.rs  project_add.css  project_add.rs  project_create.css  project_create.rs  project_import.css  project_import.rs
editor/src/router/browser/: browser.rs  mod.rs  project_list.rs  project_overview.rs
editor/src/router/browser_components/: mod.rs  project_list.rs  project_overview.css  project_overview.rs
editor/src/router/editor/: console.css  console.rs  console_messages.rs  editor.css  editor.rs  external_editor_button.rs  mod.rs  project_hot_reload.rs  project_runner.rs  running_state.rs
editor/src/router/editor_components/: console.css  console.rs  editor_bool_field.css  editor_bool_field.rs  editor_console.rs  editor_number_field.rs  editor_slider.css  editor_slider.rs  mod.rs  params_editor.css  params_editor.rs  project_hot_reload.rs  project_runner.rs  running_state.rs
editor/src/router/project_add/: mod.rs  project_add.css  project_add.rs  project_create.css  project_create.rs  project_import.rs
editor/src/router/project_plot_settings/: mod.rs  project_plot_settings.css  project_plot_settings.rs
editor/src/router/remote/: mod.rs  plotter_position.rs  remote.css  remote.rs
editor/src/router_components/: browser.css  browser.rs  editor.css  editor.rs  mod.rs  project_create.css  project_create.rs
editor/src/router_components/add_project/: project_add.rs  project_create.rs  project_import.rs
editor/src/router_components/editor_components/: editor_number_field.rs  editor_slider.rs  mod.rs  params_editor.css  params_editor.rs  project_hot_reload.rs  project_runner.rs  running_state.rs
editor/src/util/: date_util.rs  date_util_test.rs  img_src.rs  mod.rs  project_runner.rs
lib/: Cargo.toml  README.md
lib/src/: lib.rs
lib/src/composition/: color.rs  color_names.rs  color_test.rs  frame.rs  frame_test.rs  grid.rs  grid_combineable_test.rs  grid_comineable.rs  layer.rs  layer_props.rs  layer_props_test.rs  layer_test.rs  mod.rs  path_end.rs  test.rs
lib/src/generate/: mod.rs
lib/src/generate/func_2d/: marching_squares.rs  mod.rs  (+1 more)
lib/src/geometry/: angle.rs  angle_operators.rs  angle_test.rs  line.rs  line_test.rs  mod.rs  transform_matrix.rs  transform_matrix_builder.rs  transform_matrix_test.rs  transform_matrx.rs  v2.rs  v2_operators.rs  v2_test.rs  v2i.rs  vec2.rs  vec2_operators.rs  vec2_test.rs
lib/src/maths/: angle.rs  angle_operators.rs  angle_test.rs  consts.rs  float.rs  float_test.rs  mod.rs  noise.rs  noise_test.rs  random.rs  thread_local.rs
lib/src/shapes/: circle.rs  circle_test.rs  containment.rs  mod.rs  path.rs  path_test.rs  rect.rs  rect_test.rs  shape.rs  shape_test.rs
lib/src/traits/: bounding_box.rs  closest_point.rs  mirror.rs  mod.rs  normalize.rs  normalize_test.rs  offset.rs  plottable.rs  plottable_test.rs  rotate.rs  rotate90.rs  scale.rs  scale2d.rs  shape.rs  shape_test.rs  transform.rs  translate.rs
project/: Cargo.toml  README.md
project/cargo_project_template/: AGENTS.md  Cargo.toml
project/cargo_project_template/src/: generate.rs  main.rs
project/project/: Cargo.toml
project/project/src/: cargo_project_template.rs  project_config.rs
project/project_macros/: Cargo.toml
project/project_macros/src/: lib.rs
project/project_params/: Cargo.toml
project/project_params/src/: lib.rs  project_param.rs  project_param_value.rs  project_params_definition.rs  project_params_list_wrapper.rs
project/resources/: gitignore
project/src/: cargo_project_template.rs  compile_cargo.rs  generate_project.rs  lib.rs  project.rs  project_main.rs  project_test.rs  project_util.rs  util.rs
project/src/project_definition/: errors.rs  generate_project.rs  mod.rs  project.rs  project_config.rs  project_file.rs  test.rs
project/src/project_params/: curve_2d.rs  curve_2d_norm.rs  curve_2d_norm_test.rs  curve_2d_test.rs  mod.rs  plottery_params_vec_test.rs  project_param.rs  project_param_optional.rs  project_param_struct.rs  project_param_value.rs  project_param_vec.rs  project_params_definition.rs  project_params_list_wrapper.rs  project_params_list_wrapper_test.rs
project/test/test_project/: test_project.plottery
project/test_proj_compile/: test_proj_compile.plottery
project/test_proj_compile2/: test_proj_compile2.plottery
server/: Cargo.toml  README.md  plottery.service
server/src/: accelleration_path.rs  accelleration_path_test.rs  base64.rs  gpio_executor.rs  hardware.rs  lib.rs  main.rs  main_debug.rs  maths.rs  maths_test.rs  pins.rs  speed_delay_handler.rs  system.rs  task_handler.rs
server/src/accelleration/: accelleration_path.rs  accelleration_path_test.rs  maths_test.rs
server/src/debug/: main.rs
server/src/lib/: lib.rs  mod.rs  plot_settings.rs  task.rs
server/src/server/: accelleration_path.rs  hardware.rs  main.rs  pins.rs  server.rs  speed_delay_handler.rs  system.rs  task_handler.rs
server/src/util/: mod.rs  system.rs
server_lib/: Cargo.toml
server_lib/src/: estimation.rs  hardware.rs  lib.rs  midi.rs  pins.rs  plot_execution.rs  plot_setting.rs  server_state.rs  task.rs
server_lib/src/accelleration/: accelleration_path.rs  accelleration_path_test.rs  maths.rs  maths_test.rs  mod.rs  speed_delay_handler.rs
(+97 files in other folders)
