[workspace]
resolver = "2"
members = ["lib", "cli", "editor", "project"]

[workspace.package]
version = "0.2.0"
authors = ["Tobias Grothmann <tobiasgrothmannplotterart@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/TobiasGrothmann/plottery"
categories = [
    "algorithms",
    "graphics",
    "gui",
    "mathematics",
    "multimedia::images",
]
keywords = ["plottery", "plotter", "generative", "art"]
