[workspace]
resolver = "2"
members = ["lib", "cli", "editor", "project", "server", "server_lib"]

[workspace.package]
version = "0.4.0"
authors = ["Tobias Grothmann <tobiasgrothmannplotterart@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/TobiasGrothmann/plottery"
categories = [
    "algorithms",
    "graphics",
    "gui",
    "mathematics",
    "multimedia::images",
]
keywords = ["plottery", "plotter", "generative", "art"]


[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
