[package]
name = "plottery_cli"
version = "0.1.0"
edition = "2021"
description = "Command line interface of Plottery, a creative coding framework for generative vector graphics and pen plotting."
authors = ["Tobias Grothmann <tobiasgrothmannplotterart@gmail.com>"]
license = "GPL-3.0"
repository = "https://github.com/TobiasGrothmann/plottery"

[dependencies]
plottery_project = { path = "../project" }
clap = { version = "4.4.18", features = ["derive"] }
