[package]
name = "plottery_cli"
edition = "2021"
description = "Command line interface of Plottery, a creative coding framework for generative vector graphics and pen plotting."
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true

[[bin]]
name = "plottery"
path = "src/main.rs"

[dependencies]
plottery_project = { path = "../project", version = "^0.4.0" }
clap = { version = "4.4.18", features = ["derive"] }
