[package]
name = "plottery_editor"
edition = "2021"
description = "Graphical Editor of Plottery, a creative coding framework for generative vector graphics and pen plotting."
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
exclude = ["dioxusin"]

[package.metadata.bundle]
name = "Plottery Editor"
icon = ["plottery/icon_512.png"]
identifier = "de.tobiasgrothmann.plottery"
copyright = "Copyright (c) Tobias Grothmann 2023. All rights reserved."
category = "Creative Coding"
short_description = "Graphical Editor of Plottery, a creative coding framework for generative vector graphics and pen plotting."
long_description = "Graphical Editor of Plottery, a creative coding framework for generative vector graphics and pen plotting."

[package.metadata.release]
pre-release-hook = ["./scripts/release_editor.sh", "{{version}}"]

[dependencies]
plottery_lib = { path = "../lib", version = "^0.7.0" }
plottery_project = { path = "../project", version = "^0.7.0" }
plottery_server_lib = { path = "../server_lib", version = "^0.7.0" }
dioxus = { version = "0.6.1", features = ["desktop"] }
directories = "5.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dioxus-logger = "0.6.1"
log = "0.4.20"
path-absolutize = "3.1.1"
chrono = "0.4.31"
dioxus-router = "0.6.1"
tokio = "1.35.1"
notify = "6.1.1"
nix = { version = "0.29.0", features = ["signal"] }
rfd = "0.14.1"
regex = "1.10.3"
base64 = "0.22.0"
bincode = "1.3.3"
open = "5.3.2"
dioxus-timer = "0.4.1"

[[bin]]
name = "PlotteryEditor"
path = "src/main.rs"
