[package]
name = "plottery_lib"
edition = "2021"
description = "Core geometry library of Plottery, a creative coding framework for generative vector graphics and pen plotting."
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
geo = "0.28.0"
geo-types = "0.7.12"
geometry-predicates = "0.3.0"
itertools = "0.13.0"
anyhow = "1.0.75"
svg = "0.17.0"
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
fastnoise-lite = "1.1.1"
rand = "0.8.5"
rand_distr = "0.4.3"
ramer_douglas_peucker = "0.2.2"
mint = "0.5.9"
base64 = "0.22.1"

[dev-dependencies]
tempfile = "3.8.1"
rand = "0.8.5"
