[package]
name = "plottery_project"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
plottery_lib = { path = "../lib" }
itertools = "0.12.0"
libloading = "0.8.1"
path-absolutize = "3.1.1"
cargo-generate = "0.19.0"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
tempfile = "3.8.1"
resvg = "0.37.0"
