[package]
name = "plottery_project"
version = "0.1.0"
edition = "2021"
description = "Project management library of Plottery, a creative coding framework for generative vector graphics and pen plotting."
authors = ["Tobias Grothmann <tobiasgrothmannplotterart@gmail.com>"]


[dependencies]
anyhow = "1.0.75"
plottery_lib = { path = "../lib" }
itertools = "0.12.0"
path-absolutize = "3.1.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
tempfile = "3.8.1"
resvg = "0.37.0"
rand = "0.8.5"
async-process = "2.0.1"
futures-lite = "2.2.0"
tokio = { version = "1.35.1", features = ["rt"] }
rust-embed = "8.0.0"
vfs = { version = "0.12.0", features = ["embedded-fs"] }
