[package]
name = "plottery_project"
edition = "2021"
description = "Project management library of Plottery, a creative coding framework for generative vector graphics and pen plotting."
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true
include = ["src/**", "Cargo.toml", "cargo_project_template/**"]

[dependencies]
plottery_project_macros = { path = "project_macros", version = "^0.4.0" }
plottery_lib = { path = "../lib", version = "^0.4.0" }
anyhow = "1.0.75"
bincode = "1.3.3"
clap = { version = "4.4.18", features = ["derive"] }
path-absolutize = "3.1.1"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.8"
tempfile = "3.8.1"
resvg = "0.37.0"
async-process = "2.0.1"
open = "5.1.2"
futures-lite = "2.2.0"
tokio = { version = "1.35.1", features = ["rt"] }
rust-embed = "8.0.0"
vfs = { version = "0.12.0", features = ["embedded-fs"] }
