[package]
name = "plottery_server"
edition = "2021"
description = "pen-plotter server executable and API libraray of Plottery, a creative coding framework for generative vector graphics and pen plotting."
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true

[dependencies]
plottery_lib = { path = "../lib", version = "^0.3.0" }
rocket = "0.5.1"
tokio = "1.43.0"

[lib]
name = "plottery_server_lib"
path = "src/lib.rs"
