[package]
name = "plottery_server"
edition = "2021"
description = "pen-plotter server executable of Plottery, a creative coding framework for generative vector graphics and pen plotting."
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true

[features]
default = []
raspi = ["dep:rppal", "dep:ioprio"]

[dependencies]
itertools = "0.14.0"
plottery_lib = { path = "../lib", version = "^0.6.0" }
plottery_server_lib = { path = "../server_lib", version = "^0.6.0" }
rocket = "0.5.1"
tokio = "1.43.0"
rppal = { version = "0.22.1", features = ["hal"], optional = true }
anyhow = "1.0.96"
ioprio = { version = "0.2.0", optional = true }
