[workspace]

[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
{{plottery-lib-include}}
{{plottery-project-include}}
clap = { version = "4.4.18", features = ["derive"] }
open = "5.1.2"
tempfile = "3.8.0"
serde-binary = "0.5.0"
serde = { version = "1.0.195", features = ["derive"] }
bincode = "1.3.3"
