[package]
name = "plottery_project_macros"
edition = "2021"
description = "macro used by plottery to setup up project parameters"
version.workspace = true
authors.workspace = true
license.workspace = true
categories.workspace = true
repository.workspace = true
keywords.workspace = true

[lib]
proc-macro = true

[dependencies]
syn = ">=2.0.59"
quote = "1.0"
proc-macro2 = ">=1.0"
