[workspace]

[package]
name = "test_project"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
lazy_static = "1.4.0"
open = "5.1.2"
plottery_lib = { path = "../../../../lib" }
plottery_project = { path = "../../../../project" }
tempfile = "3.8.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
